--- a/campagne.tex
+++ b/campagne.tex
@@ -369,7 +369,7 @@ Nous avons un peu plus de succès avec \morgane{} qui pourrait nous aider si nou
 % **************************************************************** Chapitre 3A 
 % ****************************************************************************
 \section{Chapitre 3A}
-Il s'agit essentiellement d'un aller-retour, en passant par \bourgpacif{}, les \marchestitan{}, \tordracine{} avant de descendre vers \blanc{} et vers le levant par le \premierfort{}, \noirbourbe{} et enfin les \chatoyantes{}. Sur place, on explore le sommet d'une tour branlante malgré l'attrait des sillons étranges dans le sable. Un coffret contient une \poupee{}. \gain{2XP, «Bien Précieux»}. Ici, on rêve d'un masque à trois yeux.
+Il s'agit essentiellement d'un aller-retour, en passant par \bourgpacif{}, les \marchestitan{}, \tordracine{} avant de descendre vers \blanc{} et vers le levant par le \premierfort{}, \noirbourbe{} et enfin les \chatoyantes{} \trade{e2>T1}. Sur place, on explore le sommet d'une tour branlante malgré l'attrait des sillons étranges dans le sable. Un coffret contient une \poupee{}. \gain{2XP, «Bien Précieux»}. Ici, on rêve d'un masque à trois yeux.
 
 \questOK{Rapporter à Morgane}{Il faut maintenant rapporter la poupée à \morgane{}}{Fait en retournant à \newcamelot{}}
 
