--- a/campagne.tex
+++ b/campagne.tex
@@ -23,273 +23,10 @@
 \usepackage{amssymb}
 \usepackage{soul}
 
-%% *****************************************************************************
-%% ********************************************************************* questOK
-%% *****************************************************************************
-\newtcolorbox{questbox}{colback=violet!10,colframe=white,left skip=0.2\textwidth}
-\newcommand{\quest}[2]{%
-  {\footnotesize
-    \begin{questbox}{\hfill\textbf{#1}\vspace{2mm}\hrule}
-    \begin{awesomeblock}[violet]{2pt}{\faQuestionCircle[regular]}{violet}
-      #2
-    \end{awesomeblock}
-  \end{questbox}
-  }
-}
-
-\newtcolorbox{questOKbox}{colback=green!10,colframe=white,segmentation style={draw=violet,solid},left skip=0.2\textwidth}
-\newcommand{\questOK}[3]{%
-  {\footnotesize
-  \begin{questOKbox}{\hfill\textbf{#1}\vspace{2mm}\hrule}
-    \begin{awesomeblock}[green]{2pt}{\faQuestionCircle}{green}
-      {
-        #2
-
-        {\color{green}\vspace{2mm}\hrule\vspace{2mm}}
-
-        $\leadsto$ #3
-      }
-    \end{awesomeblock}
-  \end{questOKbox}
-  }
-}
-%% *****************************************************************************
-%% *****************************************************************************
-%% *****************************************************************************
-\newcommand{\nrj}[1][]{{\color{teal} #1\faBolt}}
-\newcommand{\nour}[1][]{{\color{olive} #1\faDrumstickBite}}
-\newcommand{\rich}[1][]{{\color{lightgray} #1\faCoins}}
-\newcommand{\rep}[1][]{{\color{orange} #1\faGrin}}
-\newcommand{\magic}[1][]{{\color{violet} #1\faSun}}
-\newcommand{\life}[1][]{{\color{red} #1\faHeart}}
-\newcommand{\terror}[1][]{{\color{black} #1\faSurprise}}
-
-\newtcolorbox{tradebox}{colback=yellow!10,colframe=white}
-%% *****************************************************************************
-%% Define a macro parsing its input argument one character at a time
-
-%% needed in Tex to be used in macro name
-\makeatletter
-
-\newcounter{@tradeitems}
-%% print ', ' if already an item before
-\newcommand\@tradeseparator{%
-  \ifnum\value{@tradeitems}>0 {,} \fi
-  \addtocounter{@tradeitems}{1}
-}
-
-%% e.E: Energie, n/N: NOUR, o/O: RICH, r/R: REP, m/M: MAGIC
-%% \trade[option put after]{combinaison de eXnXoXrXmX > EXNXOXRXMX}
-\newcommand\trade[2][]{%
-  \setcounter{@tradeitems}{0}
-  %\marginnote[right]{[\@mytrade#2\@nnil#1]}
-  [\@mytrade#2\@nnil#1]
-}
-
-\def\@mytrade#1{%
-  %% if #1 == \@nil do nothing and stop expanding
-  %% sinon utilise \mymacro@char@#1 et continue la suite
-  \ifx\@nnil#1\relax\else
-  \@nameuse{mytrade@char@#1\expandafter}%
-  \fi
-}
-%% Définit un "faiseur de macro"
-%% \defcharcode#1 définira une macro \mytrade@char@#1 qui finira par
-%% appeler récursirvement \@mytrade
-\def\defcharcode#1{%
-    \@namedef{mytrade@char@#1}%
-}
-%% e: use NRJ
-\defcharcode{e}#1{%
-  \@tradeseparator%
-  \nrj[-#1]%
-  \@mytrade
-}
-%% n: use NOUR
-\defcharcode{n}#1{% reads further character after q
-  \@tradeseparator%  
-  \nour[-#1]%
-  \@mytrade
-}
-%% o: use OR
-\defcharcode{o}#1{% reads further character after q
-  \@tradeseparator%
-  \rich[-#1]%
-  \@mytrade
-}
-%% r: use REP
-\defcharcode{r}#1{% reads further character after q
-  \@tradeseparator%
-  \rep[-#1]%
-  \@mytrade
-}
-%% m: use MAG
-\defcharcode{m}#1{% reads further character after q
-  \@tradeseparator%
-  \magic[-#1]%
-  \@mytrade
-}
-%% v: use LIFE
-\defcharcode{v}#1{% reads further character after q
-  \@tradeseparator%
-  \life[-#1]%
-  \@mytrade
-}
-%% t: use TERROR
-\defcharcode{t}#1{% reads further character after q
-  \@tradeseparator%
-  \terror[#1]%
-  \@mytrade
-}
-\defcharcode{>}{%
-  \setcounter{@tradeitems}{0}
-   $\Rightarrow$ 
-  \@mytrade
-}
-%% E: gain NRJ
-\defcharcode{E}#1{%
-  \@tradeseparator%
-  \nrj[#1]\index{Gain!Energie}%
-  \@mytrade
-}
-%% N: gain NOUR
-\defcharcode{N}#1{% reads further character after q
-  \@tradeseparator%
-  \nour[#1]\index{Gain!Nourriture}% 
-  \@mytrade
-}
-%% O: gain OR
-\defcharcode{O}#1{% reads further character after q
-  \@tradeseparator%
-  \rich[#1]\index{Gain!Richesse}%
-  \@mytrade
-}
-%% R: gain REP
-\defcharcode{R}#1{% reads further character after q
-  \@tradeseparator%
-  \rep[#1]\index{Gain!Reputation}%
-  \@mytrade
-}
-%% M: gain MAG
-\defcharcode{M}#1{% reads further character after q
-  \@tradeseparator%
-  \magic[#1]\index{Gain!Magie}%
-  \@mytrade
-}
-%% V: gain LIFE
-\defcharcode{V}#1{% reads further character after q
-  \@tradeseparator%
-  \life[#1]\index{Gain!Vie}%
-  \@mytrade
-}
-%% T: gain Terror
-\defcharcode{T}#1{% reads further character after q
-  \@tradeseparator%
-  \terror[-#1]\index{Gain!Terreur}%
-  \@mytrade
-}
-
-
-\makeatother
-%% *****************************************************************************
-
-%% *****************************************************************************
-%% ****************************************************************** secret/loc
-%% *****************************************************************************
-\newcommand{\loc}[1]{%
-  (lieu #1)
-}
-\newcommand{\secret}[1]{%
-  [secret #1]
-}
-%% using xparse
-%% 1=Nom, [2=entry, default=XX], [3=key pour index sans accent]
-\DeclareDocumentCommand{\lieu}{m O{XX} o}{%
-  \underline{#1} (#2)\index{\IfNoValueTF{#3}{#1}{#3@#1}}%
-}
-
-\def\adiante{\lieu{Mer d'Adiante}[153]}
-\def\blanc{\lieu{Blanc-Lichen}[107]}
-\def\boismuraille{\lieu{Bois-Muraille}}
-\def\bourgr{\lieu{Bourg Pestiféré}[138,142][Bourg]}
-\def\bourgpacif{\lieu{Bourg Pacifié}[142][Bourg]}
-\def\broch{\lieu{Broch Cruach}[136]}
-\def\bundorca{\lieu{Bundorca}[135,148]}
-\def\camelot{\lieu{Camelot}}
-\def\cerclelunaire{\lieu{Cercle Lunaire}[133]}
-\def\chatoyantes{\lieu{Étendues Chatoyantes}[157][Etendues Chatoyantes]}
-\def\conclave{\lieu{Conclave Calciné}[104][Conclave Calcine]}
-\def\croisee{\lieu{Croisée}[152][Croisee]}
-\def\cuanacht{\lieu{Cuanacht}[101]}
-\def\faldorca{\lieu{Faldorca}[148]}
-\def\falfuar{\lieu{Falfuar}[134,147]}
-\def\flotte{\lieu{Flotte d'Épaves}[119][Flotte d'Epaves]}
-\def\lacmiroir{\lieu{Lac Miroir}[113]}
-\def\lames{\lieu{Lames de la Mélancholie}[105][Lames de la Melancholie]}
-\def\loincomtat{\lieu{Loincomtat}}
-\def\newcamelot{\lieu{Nouvelle Camelot}[190]}
-\def\marchestitan{\lieu{Marches du Titan}[115]}
-\def\monasteremere{\lieu{Monastère de la Toute-Mère}[140][Monastere de la Toute-Mere]}
-\def\murmures{\lieu{Forêt des Murmures}[155][Foret des Murmures]}
-\def\nidcorbeaux{\lieu{Nid-de-Corbeaux}[160]}
-\def\noirbourbe{\lieu{Noirebourbe}[140]}
-\def\premierfort{\lieu{Premier Fort}[117]}
-\def\templemere{\lieu{Temple de la Toute-Mère}[115][Temple de la Toute-Mere]}
-\def\tombesordre{\lieu{Tombes de l'Ordre}[154]}
-\def\tordracine{\lieu{Tordracine}[114]}
-\def\tuathan{\lieu{Tuathan}}
-
-\newcommand{\perso}[1]{\textbf{#1}}
-%% using xparse
-%% 1=Nom, [2=key pour index sans accent]
-\DeclareDocumentCommand{\perso}{m o}{%
-  \textbf{#1}\index{\IfNoValueTF{#2}{#1}{#2@#1}}%
-}
-\def\agravain{\perso{Agravain}}
-\def\amergin{\perso{Amergin}}
-\def\arev{\perso{Arev}}
-\def\aubert{\perso{Aubert}}
-\def\badb{\perso{Badb}}
-\def\bedivere{\perso{Bedivère}[Bedivere]}
-\def\beor{\perso{Béor}[Beor]}
-\def\bors{\perso{Bors}}
-\def\breagach{\perso{Bréagach}[Breagach]}
-\def\cosuil{\perso{Cosuil}}
-\def\dame{\perso{Dame du Lac}}
-\def\erfir{\perso{Erfyr}}
-\def\fael{\perso{Faël}[Fael]}
-\def\gaheris{\perso{Gaheris}}
-\def\galaad{\perso{Galaad}}
-\def\gauvain{\perso{Gauvain}}
-\def\geraint{\perso{Geraint}}
-\def\larve{\perso{Larve}}
-\def\lamorak{\perso{Lamorak}}
-\def\lancelot{\perso{Lancelot}}
-\def\macha{\perso{Macha}}
-\def\mordred{\perso{Mordred}}
-\def\morfran{\perso{Morfran}}
-\def\morgane{\perso{Morgane}}
-\def\neante{\perso{Néante}[Neante]}
-\def\nemain{\perso{Nemain}}
-\def\orrin{\perso{Orrin}}
-\def\palamede{\perso{Palamède}[Palamede]}
-\def\yvain{\perso{Yvain}}
-
-%\newcommand{\art}[1]{\texttt{#1}}
-\DeclareDocumentCommand{\art}{m o}{%
-  \texttt{#1}\index{\IfNoValueTF{#2}{#1}{#2@#1}}%
-}
-\def\graal{\art{Graal}}
-\def\fauxgraal{\art{Faux Graal}}
-\def\masque{\art{Masque Funéraire}[Masque Funeraire]}
-\def\guivre{\art{Guivre}}
-\def\poupee{\art{Poupée de Paille}[Poupee de Paille]}
-\def\pierrerancune{\art{Pierre des Rancunes}}
-\def\tetemorrigan{\art{Tête de Morrigan}[Tete de Morrigan]}
-
-\newcommand{\gain}[1]{{\color{red}\textbf{[#1]}}}
-
-\newcommand{\unk}[1]{{\color{orange}(#1)}}
+% ****************************************************************************
+% ********************************************************************* COMMON 
+% ****************************************************************************
+\input{common}
 
 
 % ****************************************************************************
@@ -323,7 +60,7 @@ Nous quittons le village de \cuanacht{} \trade{e1>R1} pour essayer de comprendre
 
 
 On chemine ensuite vers \blanc{} \trade{e1n1>R1} où du lichen (cristaux de sel) disparaît. On traverse \tordracine{} \trade[, r.VERT]{e2>N2}où on trouve une loge de gardiens-pisteurs, ainsi que le corps de \fael{}, la poitrine percée d'une lance de wyrdacier. Dans sa sacoche, le \fauxgraal{} et un mot indiquant qu'ils se sont séparé, pour augmenter les chances d'aller à \newcamelot{}.
-\quest{Femme de \fael{}}{Aller à \blanc{} pour donner à la femme de \fael{} des nouvelles de son funeste destin.}
+\questOK{Femme de \fael{}}{Aller à \blanc{} pour donner à la femme de \fael{} des nouvelles de son funeste destin.}{On apprend que \fael{} était \galaad{}.}
 
 Nous sauvons aussi \cosuil{}, une femme qui cherchait un érudit (il vivrait à \boismuraille{}) permettant de comprendre ses notes familiales sur la façon de vaincre les Précurseurs.
 
@@ -386,7 +123,7 @@ A peine à l'Ouest, les deux villages de \bundorca{} et \falfuar{} se partagent 
 
 Au nord, les \tombesordre{} nous attendent. On effectue une prudente descente dans le puit imposant sans rien trouver d'autre que des ossements, une épée brisée \rich[1]. Il y a aussi \bedivere{} et \palamede{} qui jouent aux cartes et qui sont contrariés que \emph{nous} ramenions le fourraux d'Excalibur \gain{2XP, \rich[4]}.
 
-\quest{Faire parler les Chevaliers}{Pour savoir ce qui s'est passé (ici aux \tombesordre{}). Ils sont tremblants et refusent de parler}.
+\questOK{Faire parler les Chevaliers}{Pour savoir ce qui s'est passé (ici aux \tombesordre{}). Ils sont tremblants et refusent de parler}{Ils ont essayé de rescusciter \arthur{} avec \neante{} et \graal{}.}
 
 Un petit passage dans la \murmures{} \trade[, r.VERT]{e2>N2}, essentiellement pour chasser. Il faut commencer à entrer dans la légende (hautes caractéristiques) pour découvrir ses secrets. (PRAGMATISME 3 nous ouvre \gain{\terror[-1], «1° Secret de la Forêt»}.
 
@@ -403,7 +140,7 @@ Dans les masures, un partie du groupe \hl{sans \larve{}} peut en apprendre plus 
 \item \breagach{} a soigné des gens à \blanc{}.
 \end{itemize}
 
-\quest{Succession de Geraint}{En apprendre plus sur les deux candidats.}
+\questOK{Succession de Geraint}{En apprendre plus sur les deux candidats.}{\morfran{} a aidé les esclavagistes, \breagach{} n'ai aidé personne et exilé.}
 
 Nous rendons visite à l'archidruide \amergin{}, prophète intellectuellement limité. Il révèle notre \fauxgraal{} qui se transforme en boue, mais le vrai serait tout près, dans la \adiante{}. \gain{1XP, \magic[1]}.
 
@@ -422,12 +159,25 @@ Il est temps d'explorer à nouveau la \adiante{}. On y trouve une tour penchée 
 
 \quest{Amener \graal{} à \tuathan{}}{
   \begin{itemize}
-  \item Demander de l'aide à \orrin{} qui est au sud de \loincomtat{}.
+  \item Demander de l'aide à \orrin{} qui est au sud de \loincomtat{}, à l'ouest des plaines de \debacle{}.
   \item Retrouver \neante{} dans la \murmures{}.
   \end{itemize}
 }
 
 \quest{Relique des Précurseurs}{Retrouver le \masque{} dans les \chatoyantes{}.}
+
+% ****************************************************************************
+% ***************************************************************** Chapitre 6 
+% ****************************************************************************
+\section{Chapitre 6}
+
+Dans le but d'aller à la \murmures{}, nous repassons par \faldorca{} et sa taverne \trade{o1>T2}. Dans la nuit, l'impression d'une grande bataille silencieuse où le Traqueur est vaincu et les gagnants vont vers \tuathan{}, à l'Ouest. Aux \tombesordre{}, nous descendons pour constater que la Tombe d'\arthur{} a été profannée, \gain{1XP, «2° Rêves et Prophéties», «2° Renseignements Troublants», \terror[1]}. Confrontés, \bedivere{} et \palamede{} admettent qu'ils ont essayé de rescusciter les restes d'\arthur{} en utilisant le \graal{} avec \neante{}. On essaye de les remettre sur le droit chemin \gain{«3° Restaurer l'Ordre»}.
+
+A \murmures{}, notre courage nous permet d'arriver avec un cheval blanc tracé à la craie \gain{ «2° Secrets de la Forêt», \craie{}}. Puis, la spiritualité nous guide vers une méditation sereine \gain{ «3° Secret de la Forêt», \life[1]}. Plus loin, un château de pierre blanches qui ne cesse de nous échapper (car pas «Vent du Wyrd» et pas de Menhir). Mais toujours pas de nouvelles de \neante{}, on décide donc d'essayer de trouver \orrin{}. Cap au sud.
+
+Nous gagnons rapidement \blanc{}. La femme de \fael{} nous apprend que ce dernier était en fait \galaad{}, elle ne veut plus en entendre parler et nous laisse ses affaires (bouclier, armure) \gain{ «2° Trésors Cachés»}. Remis au seigneur du village qui, abasourdi, nous demande de quitter discrètement le village \gain{ \rich[1], «1° Restaurer l'Ordre»}. On prend quand même le temps de s'intéresser au passé de \breagach{}, pour apprendre qu'il n'a aidé personne et juste fait de l'argent en vendant le lichen comme remède médicinal; il a été exilé \gain{ «2° Successeur de Geraint»}.
+
+De là, direction l'est vers le \bosquet{}.
 
 \printindex
 
