ADD ch6 to hospices}

--- a/common.tex
+++ b/common.tex
@@ -243,6 +243,7 @@
 \def\galaad{\perso{Galaad}}
 \def\gauvain{\perso{Gauvain}}
 \def\geraint{\perso{Geraint}}
+\def\guivrarpion{\perso{Guivrarpion}}
 \def\larve{\perso{Larve}}
 \def\lamorak{\perso{Lamorak}}
 \def\lancelot{\perso{Lancelot}}
