ADD campagne chap6 loincomtat

--- a/campagne.tex
+++ b/campagne.tex
@@ -173,13 +173,13 @@ Il est temps d'explorer à nouveau la \adiante{}. On y trouve une tour penchée 
 
 Dans le but d'aller à la \murmures{}, nous repassons par \faldorca{} et sa taverne \trade{o1>T2}. Dans la nuit, l'impression d'une grande bataille silencieuse où le Traqueur est vaincu et les gagnants vont vers \tuathan{}, à l'Ouest. Aux \tombesordre{}, nous descendons pour constater que la Tombe d'\arthur{} a été profannée, \gain{1XP, «2° Rêves et Prophéties», «2° Renseignements Troublants», \terror[1]}. Confrontés, \bedivere{} et \palamede{} admettent qu'ils ont essayé de rescusciter les restes d'\arthur{} en utilisant le \graal{} avec \neante{}. On essaye de les remettre sur le droit chemin \gain{«3° Restaurer l'Ordre»}.
 
-A \murmures{}, notre courage nous permet d'arriver avec un cheval blanc tracé à la craie \gain{ «2° Secrets de la Forêt», \craie{}}. Puis, la spiritualité nous guide vers une méditation sereine \gain{ «3° Secret de la Forêt», \life[1]}. Plus loin, un château de pierre blanches qui ne cesse de nous échapper (car pas «Vent du Wyrd» et pas de Menhir). Mais toujours pas de nouvelles de \neante{}, on décide donc d'essayer de trouver \orrin{}. Cap au sud.
+A \murmures{}, notre courage nous permet d'arriver àun cheval blanc tracé à la craie \gain{ «2° Secrets de la Forêt», \craie{}}. Puis, la spiritualité nous guide vers une méditation sereine \gain{ «3° Secret de la Forêt», \life[1]}. Plus loin, un château de pierre blanches qui ne cesse de nous échapper (car pas «Vent du Wyrd» et pas de Menhir). Mais toujours pas de nouvelles de \neante{}, on décide donc d'essayer de trouver \orrin{}. Cap au sud.
 
 Nous gagnons rapidement \blanc{}. La femme de \fael{} nous apprend que ce dernier était en fait \galaad{}, elle ne veut plus en entendre parler et nous laisse ses affaires (bouclier, armure) \gain{ «2° Trésors Cachés»}. Remis au seigneur du village qui, abasourdi, nous demande de quitter discrètement le village \gain{ \rich[1], «1° Restaurer l'Ordre»}. On prend quand même le temps de s'intéresser au passé de \breagach{}, pour apprendre qu'il n'a aidé personne et juste fait de l'argent en vendant le lichen comme remède médicinal; il a été exilé \gain{ «2° Successeur de Geraint»}.
 
 De là, direction l'est vers le \bosquet{} \trade[, r.VERT]{e2>N2} et son crâne gigantesque pour d'anciennes offrandes. On ne préfère pas le profaner ou le piller. Cette fois, y rêver ne nous permet pas de courir ``vraiment'' la forêt pour la nourriture (mais... peut-être humain... ancien gain \gain{«1° Marque du Chasseur», «1° Chant du Deuil»}.
 
-Après un temps qui paraît infini, nous voici de nouveau à \cuanacht{}. Sans but, on erre dans les ruelles envahies de Wyrd, on se croirait 600 ans en arrière \gain{\terror[3], \magic[1]}. Un cauchemard nocturne montre une \guivre{} de la taille d'une montagne et des villageois déçus de ne pas avoir été protégés par nous.
+Après un temps qui paraît infini, nous voici de nouveau à \cuanacht{}. Sans but, on erre dans les ruelles envahies de Wyrd, on se croirait 600 ans en arrière \gain{\terror[3], \magic[1]}. Un cauchemar nocturne montre une \guivre{} de la taille d'une montagne et des villageois déçus de ne pas avoir été protégés par nous.
 
 Détour rapide par le \lacmiroir{}, on ne cherche pas à y voir la \dame{} (pas «Traqués», pas de Talisman, plus de \fauxgraal{}) et on va chasser (\trade{r1t1>N2}) ce qui déplaît aux esprits.
 
@@ -187,6 +187,11 @@ Plus au sud-ouest, \beor{} veut absolument aller à la \foire{} \trade[,1XP]{e4v
 
 \beor{} blessé, nous traversons vers l'\hospice{} \trade{e1o1>V3}. Sur place, on se faufile dans les profondeurs interdites sans se faire repére. L'archidruide \guivrarpion{}, enfermé là, il révèle le secret des Menhirs \gain{2XP, «5° Rêves et Prophéties»} \hl{si \larve{} n'est pas l\`a}.
 
+Nouvelle traversée de l'île pour revenir au delà du \bosquet{}, vers le l'ancien \tumulus{} \trade[, 6 sur D6?]{e2t1>O1}, miné par les chasseurs de trésors. On s'enfonce dans les profondeurs pour en atteindre le c\oe{}ur, entrée en vieillacier que l'on force et qui aurait pu permettre d'apprendre le secret des Menhir \gain{\magic[1]}.
+
+On arrive enfin à \loincomtat{} \trade{o1>M1}, au pied des murailles infranchissables de \tuathan{}. Une visite au hall nous apprend que, pour l'instant (Ennemis ou Alliés d'Avalon n'est pas décidé), dame \kincaid{} ne reçoit pas. Au marché, les prix se sont littéralement envolés, notamment pour Maître \dobromir{} le fabricant de jouets : \trade{o3>N1}, \trade{n2>O1}, \trade{o3>V4}, \trade[obj]{o3>}, \trade[obj]{>O1}. En quittant le marché, une vieille nous accoste et comme nous connaissons le «Secret du Vieilacier», on repère chez elle des \gain{\outilspierre} pour \rich[2]. On grimpe sur le Dolmen, pour voir l'ancienne capital de \tuathan{} envahie par le Wyrd. Les gardes parlent d'une bataille qui aurait eu lieu au sud.
+
+\quest{Bataille Magique?}{Aller dans \plainessacrees{} au Sud pour en savoir plus sur bataille.}
 \printindex
 
 \end{document}
