--- a/common.tex
+++ b/common.tex
@@ -206,19 +206,20 @@
 \def\lacmiroir{\lieu{Lac Miroir}[113]}
 \def\lames{\lieu{Lames de la Mélancholie}[105][Lames de la Melancholie]}
 \def\larvebois{\lieu{Larvebois}[108]}
-\def\loincomtat{\lieu{Loincomtat}}
+\def\loincomtat{\lieu{Loincomtat}[116]}
 \def\newcamelot{\lieu{Nouvelle Camelot}[190]}
 \def\marchestitan{\lieu{Marches du Titan}[115]}
 \def\monasteremere{\lieu{Monastère de la Toute-Mère}[140][Monastere de la Toute-Mere]}
 \def\murmures{\lieu{Forêt des Murmures}[155][Foret des Murmures]}
 \def\nidcorbeaux{\lieu{Nid-de-Corbeaux}[160]}
 \def\noirbourbe{\lieu{Noirebourbe}[140]}
+\def\plainessacrees{\lieu{Plaines Sacrées}[???][Plaines Sacrees]}
 \def\premierfort{\lieu{Premier Fort}[117]}
 \def\templemere{\lieu{Temple de la Toute-Mère}[115][Temple de la Toute-Mere]}
 \def\tombesordre{\lieu{Tombes de l'Ordre}[154]}
 \def\tordracine{\lieu{Tordracine}[114]}
 \def\tuathan{\lieu{Tuathan}}
-
+\def\tumulus{\lieu{Tumulus des Précurseurs}[106][Tumulus des Precurseurs]}
 %%\newcommand{\perso}[1]{\textbf{#1}}
 %% using xparse
 %% 1=Nom, [2=key pour index sans accent]
@@ -237,6 +238,7 @@
 \def\breagach{\perso{Bréagach}[Breagach]}
 \def\cosuil{\perso{Cosuil}}
 \def\dame{\perso{Dame du Lac}}
+\def\dobromir{\perso{Dobromir}}
 \def\erfir{\perso{Erfyr}}
 \def\fael{\perso{Faël}[Fael]}
 \def\gaheris{\perso{Gaheris}}
@@ -244,6 +246,7 @@
 \def\gauvain{\perso{Gauvain}}
 \def\geraint{\perso{Geraint}}
 \def\guivrarpion{\perso{Guivrarpion}}
+\def\kincaid{\perso{Kincaid}}
 \def\larve{\perso{Larve}}
 \def\lamorak{\perso{Lamorak}}
 \def\lancelot{\perso{Lancelot}}
@@ -266,6 +269,7 @@
 \def\fauxgraal{\art{Faux Graal}}
 \def\guivre{\art{Guivre}}
 \def\masque{\art{Masque Funéraire}[Masque Funeraire]}
+\def\outilspierre{\art{Outils de Tailleur de Pierre}}
 \def\pierrerancune{\art{Pierre des Rancunes}}
 \def\poupee{\art{Poupée de Paille}[Poupee de Paille]}
 \def\tetemorrigan{\art{Tête de Morrigan}[Tete de Morrigan]}
