--- a/lua/todo.org
+++ b/lua/todo.org
@@ -1,8 +1,12 @@
-* [/] MCTS
+* __CURRENT__: MCTS.eval
+* [0/1] MCTS
+** TODO eval => need to reach a final state
 * [1/1] Follow
 ** DONE [/] list card that can be played in follow
-* [1/1] Apply
+* [1/3] Apply
 ** DONE [/] Wounding player
+** TODO action_runaway 
+** TODO action_end_turn : refill players
 * GIT ***********************************************************************
 ** delete remote branch
 git push -d origin <branch_name>
