UPD Campagne jusu'au chap7

--- a/campagne.tex
+++ b/campagne.tex
@@ -192,6 +192,23 @@ Nouvelle traversée de l'île pour revenir au delà du \bosquet{}, vers le l'anc
 On arrive enfin à \loincomtat{} \trade{o1>M1}, au pied des murailles infranchissables de \tuathan{}. Une visite au hall nous apprend que, pour l'instant (Ennemis ou Alliés d'Avalon n'est pas décidé), dame \kincaid{} ne reçoit pas. Au marché, les prix se sont littéralement envolés, notamment pour Maître \dobromir{} le fabricant de jouets : \trade{o3>N1}, \trade{n2>O1}, \trade{o3>V4}, \trade[obj]{o3>}, \trade[obj]{>O1}. En quittant le marché, une vieille nous accoste et comme nous connaissons le «Secret du Vieilacier», on repère chez elle des \gain{\outilspierre} pour \rich[2]. On grimpe sur le Dolmen, pour voir l'ancienne capital de \tuathan{} envahie par le Wyrd. Les gardes parlent d'une bataille qui aurait eu lieu au sud.
 
 \quest{Bataille Magique?}{Aller dans \plainessacrees{} au Sud pour en savoir plus sur bataille.}
+
+Le lendemain, on arrive dans les plaines de \debacle{} \trade{e1n1>R1} et leurs gigantesques figures de calcaire, les réfugiés venus de l'Ouest abondent. On trouve une tombe, celle du Seigneur \yvain{} dont le sacrifice touche profondément \larve{} qui pourtant ne l'aimait guère \gain{1 Empathie, «4° leçon finale»}. Nous conseillons aux réfugiés qui demandent de l'aide de se diriger vers \newcamelot{} \gain{«2° rencontres étranges»}. \larve{} reste et rève qu'il senvole \gain{\nrj[1]}.
+
+\beor{}, lui,  retourne à la \foire{}. Il prête une main secourable \gain{1XP, «1° main secourable»} à un guerrier en rachetant son contrat. Il se renseigne sur la première expédition et apprend qu'ils sont partis aider au siège de \boismuraille{}, y cherchant un passage vers \tuathan{} mais en sont revenu hagards, sous le choc de la mort d'\yvain{}. \gain{«6° destin expédition»}.
+
+\quest{Retrouver l'expédition}{Il faut se dépêcher de retrouver la première expédition avant qu'il ne soit trop tard.}
+
+Ensemble, nous parvenons \sousmuraille{} pour chasser \trade[, r. Verte]{e2>N1}. En l'observant, nous remarquons une silhouette qui nous fait penser qu'elle n'est pas abandonnée \gain{\nrj[1]}. Des mercenaires nous accueillent et voudraient troquer le butins qu'ils ont pillés sur des corps, nous préférons les aider à pousser leurs chariots. En échange, ils nous racontent le mariage de dame \kincaid{} et de \ultan{} le riche marchand de \boismuraille. Avec l'argent de son époux, la dame se refait une santée et vient faire le siège de \boismuraille{}, aidée par la première expédition, mais \yvain{} y change soudain d'allégeance \gain{\nour[1], «4° destin de l'expédition»}. En cherchant à traverser la muraille d'os, on trouve 5 cadavres avec, entre autre, un \talismanterni{} fait dans un étrange matériau, il n'a pas été façonné de la main de l'homme \gain{«3° rêves et prophéties», 1XP}. Enfin, nous arrivons au somment ce qui nous permet d'y pisser fièrement, tels de véritables aventuriers \gain{1XP, \terror[-1], «4 rencontres étranges»}.
+
+Chargés de nourriture, nous repartons vers le sud en repassant par \debacle{} pour arriver à \bordwyrd{} \trade{o2>V3} ou \trade{m2>V3}. Le crannoge central, au bout du pont, est la demeure d'\orrin{}. Il nous trouve d'abord trop impudents de nous considérer comme des Héros (\secret{283}, \rep[-2]), puis trop ambitieux de vouloire sauver Avalon (\secret{483}, \rep[-2]) mais quand on demande ses conseils (\secret{436}), il finit par accepter de nous inviter à séjourner avec lui \gain{2XP, «2° alliés Avalon»}.
+
+Dans son crannoge, il ne nous raconte pas encore comment il a été en Tuathan (il faudrait le «blason de l'ordre» ou «la main du peuple» ou tout savoir sur l'expédition). Il nous apprend cependant que seul \arthur{} pourrait libérer la \flotte{}. Quant à la première expédition, ils ont choisis le pire chemin vers Tuathan à travers la \valleegardiens{} et l'entrée secrète dans la ville haute de \boismuraille{}, alors qu'il y a tellement plus simple... \gain{3XP, «2° destin de l'expédition», «3° destin de l'expédition»}.
+
+\quest{Accéder au mouillage}{Le secret du «mouillage» de la \flotte{} a été perdu avec la mort d'\arthur{}}.
+
+Il accepte finalement de nous aider à aller à Tuathan si nous faisons nos preuves, en nous rappelant que \lancelot{} à \newcamelot{} sait où sont les chevaliers et que la \tetesereine{} permet de revivre des éléments du passé.
+
 \printindex
 
 \end{document}
