--- a/common.tex
+++ b/common.tex
@@ -186,6 +186,7 @@
 \def\adiante{\lieu{Mer d'Adiante}[153]}
 \def\blanc{\lieu{Blanc-Lichen}[107]}
 \def\boismuraille{\lieu{Bois-Muraille}}
+\def\bordwyrd{\lieu{Borduwyrd}[141]}
 \def\bosquet{\lieu{Bosquet des Chasseurs}[102]}
 \def\bourgr{\lieu{Bourg Pestiféré}[138,142][Bourg]}
 \def\bourgpacif{\lieu{Bourg Pacifié}[142][Bourg]}
@@ -214,12 +215,15 @@
 \def\nidcorbeaux{\lieu{Nid-de-Corbeaux}[160]}
 \def\noirbourbe{\lieu{Noirebourbe}[140]}
 \def\plainessacrees{\lieu{Plaines Sacrées}[???][Plaines Sacrees]}
+\def\sousmuraille{\lieu{Sous la Muraille}[111]}
 \def\premierfort{\lieu{Premier Fort}[117]}
+\def\tetesereine{\lieu{Tête Sereine}[132][Tete Sereine]}
 \def\templemere{\lieu{Temple de la Toute-Mère}[115][Temple de la Toute-Mere]}
 \def\tombesordre{\lieu{Tombes de l'Ordre}[154]}
 \def\tordracine{\lieu{Tordracine}[114]}
 \def\tuathan{\lieu{Tuathan}}
 \def\tumulus{\lieu{Tumulus des Précurseurs}[106][Tumulus des Precurseurs]}
+\def\valleegardiens{\lieu{Vallée des Gardiens}[???][Valle des Gardiens]}
 %%\newcommand{\perso}[1]{\textbf{#1}}
 %% using xparse
 %% 1=Nom, [2=key pour index sans accent]
@@ -258,6 +262,7 @@
 \def\nemain{\perso{Nemain}}
 \def\orrin{\perso{Orrin}}
 \def\palamede{\perso{Palamède}[Palamede]}
+\def\ultan{\perso{Ultan}}
 \def\yvain{\perso{Yvain}}
 
 %\newcommand{\art}[1]{\texttt{#1}}
@@ -272,6 +277,7 @@
 \def\outilspierre{\art{Outils de Tailleur de Pierre}}
 \def\pierrerancune{\art{Pierre des Rancunes}}
 \def\poupee{\art{Poupée de Paille}[Poupee de Paille]}
+\def\talismanterni{\art{Talisman Terni}}
 \def\tetemorrigan{\art{Tête de Morrigan}[Tete de Morrigan]}
 
 \newcommand{\gain}[1]{{\color{red}\textbf{[#1]}}}
