--- a/common.tex
+++ b/common.tex
@@ -196,6 +196,7 @@
 \def\cerclelunaire{\lieu{Cercle Lunaire}[133]}
 \def\chatoyantes{\lieu{Étendues Chatoyantes}[157][Etendues Chatoyantes]}
 \def\conclave{\lieu{Conclave Calciné}[104][Conclave Calcine]}
+\def\cornes{\lieu{Cornes du Sud}[120]}
 \def\croisee{\lieu{Croisée}[152][Croisee]}
 \def\cuanacht{\lieu{Cuanacht}[101]}
 \def\debacle{\lieu{Debâcle}[118][Debacle]}
@@ -224,6 +225,7 @@
 \def\tuathan{\lieu{Tuathan}}
 \def\tumulus{\lieu{Tumulus des Précurseurs}[106][Tumulus des Precurseurs]}
 \def\valleegardiens{\lieu{Vallée des Gardiens}[???][Valle des Gardiens]}
+\def\valsanglant{\lieu{Val Sanglant}[112]}
 %%\newcommand{\perso}[1]{\textbf{#1}}
 %% using xparse
 %% 1=Nom, [2=key pour index sans accent]
