--- a/campagne.tex
+++ b/campagne.tex
@@ -209,6 +209,35 @@ Dans son crannoge, il ne nous raconte pas encore comment il a été en Tuathan (
 
 Il accepte finalement de nous aider à aller à Tuathan si nous faisons nos preuves, en nous rappelant que \lancelot{} à \newcamelot{} sait où sont les chevaliers et que la \tetesereine{} permet de revivre des éléments du passé.
 
+% ****************************************************************************
+% ***************************************************************** Chapitre 7 
+% ****************************************************************************
+\section{Chapitre 7}
+
+Nous retournons d'abord à \sousmuraille{} pour continuer au nord vers \boismuraille{}. Nous ne sommes pas «Égarés et déchus» et accédons au pont-levis pour constater que la ville est assiégée. Des mercenaires nous accostent, on demande des infos (3) et ils nous prennent pour des espions, mais nous balayons ces fausses accusations et apprenons que l'armée de \nidcorbeaux{} (de \mordred{}) en fait le siège car les marchands ne les ont pas payé après leur aide à \loincomtat{} \gain{«1° Guerre pour Avalon»}. Notre réputation nous permet d'entrer dans la Cité (7) sans parler à leur chef.
+
+Nous nous renseignons sur la 1ère expédition (2), un poissonnier nous dit qu'ils sont arrivés avec les envahisseurs venus du Nord mais ont escaladé la muraille pour jurer fidélité à \ultan{}. Sont ensuite entré dans la Halle du Roi et ont disparu. \gain{\nrj[-1], «1° et 4° Destin de l'expédition»}. Quand nous essayons à notre tour d'entrer dans la Halle (9) alors que nous ne sommes pas des «Invités d'Honneur», la tension monte \gain{\rep{-1} \life[-1] par pt Aggressivité}. On repart sans avoir parlé à \ultan{} ou avoir visité le quartier commerçant.
+
+On va alors à l'est vers \visageserein{} \trade{e3>T2M1} pour y activer le Menhir, ce qui demande «Mystère résolu». On commence par escalader la tête (8) ce qui permet d'avoir une idée de l'ampleur de la tâche \gain{\terror[-1]}.
+
+\questOK{Raviver le Menhir de Visage Serein}{}{Il faut explorer en passant par l'oreille}.
+
+Dans l'oreille du visage, une corde indique que quelqu'un est passé récemment (6) et on suit sa piste (12), puis \secret{142} pour arriver dans les tréfonds du labyrinthe. Il faut du temps pour rassembler les indices \secret{114}. La salle, avec vieux piège, corps momifié et symboles sybillins sur les mur, est \emph{l'intérieur} d'un Menhir, ce qui est surprenant car elle prédate \arthur{} qui est sensé les avoir construits \gain{«6° Myustère Brûlant», «Mystère Résolu»}.
+
+Un détour par \sousmuraille{} pour chasser un peu et nous repartons vers le nord pour arriver à \longcairn{} \trade[-1 obj]{e1>O1R1}. C'est une ancienne tour de guet érigée après le siège raté de \tuathan{} la cité des Précurseurs. Plutôt que de nous recueillir ou chercher des infos sur \tuathan{} ou chercher \agravain{} on payepour avoir des nouvelles de la 1ère expédition \gain{\rich[-2], «2° Destin de l'Expédition»} qui a fait une courte halte ici avant de continuer dans la vallée, au mépris des avertissements. Arrivés à 5 ils sont repartis à 4.
+
+Et donc, nous nous enfonçons dans la \valleegardiens{}, jonchée d'ossements. La peste sévit dans le village côtier et nous y recroisons le chevalier qui avait vendu son contrat à \beor{} (1 puis \secret{331}). Avec son épouse, ils ont propagé la peste en essayant de retrouver leurs enfants (accusés \secret{246}). Ils ne bougeront plus d'ici et on les laisse tranquilles \gain{+1XP, \terror[1] par pt de Prudence}.
+
+Dans la vallée, on progresse malgré les statues (6)-(8)-(10). La douleur et la peur ont raison de nous, on tombe à côté du cadavre d'\aubert{} \gain{+2XP, «2° Destin Expédition», }. On repart se réfugier dans un trou \secret{413} où sont entassés des voyageurs, depuis de nombreuses années pour certains. C'est plutôt la honte et l'aspect communautaire qui les retiennent ici \secret{441}, \secret{169}.
+
+De retour à \longcairn{}, on cherche le chevalier \agravain{} qui patrouille aux abords.Il veut capturer une créature des Précurseurs et nous l'y aidons \secret{551}. Après avoir vaincu un Conquéreur, ce dernier reste malheureusement muet mais nous arrivons à convaincre \agravain{} de rentrer à \camelot{} \gain{«5° Restaure Ordre»}. 
+
+
+
+
+
+
+
 \printindex
 
 \end{document}
