--- a/common.tex
+++ b/common.tex
@@ -185,7 +185,7 @@
 
 \def\adiante{\lieu{Mer d'Adiante}[153]}
 \def\blanc{\lieu{Blanc-Lichen}[107]}
-\def\boismuraille{\lieu{Bois-Muraille}}
+\def\boismuraille{\lieu{Bois-Muraille}[131]}
 \def\bordwyrd{\lieu{Borduwyrd}[141]}
 \def\bosquet{\lieu{Bosquet des Chasseurs}[102]}
 \def\bourgr{\lieu{Bourg Pestiféré}[138,142][Bourg]}
@@ -209,6 +209,7 @@
 \def\lames{\lieu{Lames de la Mélancholie}[105][Lames de la Melancholie]}
 \def\larvebois{\lieu{Larvebois}[108]}
 \def\loincomtat{\lieu{Loincomtat}[116]}
+\def\longcairn{\lieu{Longcairn}[151]}
 \def\newcamelot{\lieu{Nouvelle Camelot}[190]}
 \def\marchestitan{\lieu{Marches du Titan}[115]}
 \def\monasteremere{\lieu{Monastère de la Toute-Mère}[140][Monastere de la Toute-Mere]}
@@ -224,8 +225,9 @@
 \def\tordracine{\lieu{Tordracine}[114]}
 \def\tuathan{\lieu{Tuathan}}
 \def\tumulus{\lieu{Tumulus des Précurseurs}[106][Tumulus des Precurseurs]}
-\def\valleegardiens{\lieu{Vallée des Gardiens}[???][Valle des Gardiens]}
+\def\valleegardiens{\lieu{Vallée des Gardiens}[150][Valle des Gardiens]}
 \def\valsanglant{\lieu{Val Sanglant}[112]}
+\def\visageserein{\lieu{Visage Serein}[132]}
 %%\newcommand{\perso}[1]{\textbf{#1}}
 %% using xparse
 %% 1=Nom, [2=key pour index sans accent]
