ADD fin chap 7, dans Tuathan

--- a/campagne.tex
+++ b/campagne.tex
@@ -233,9 +233,13 @@ Dans la vallée, on progresse malgré les statues (6)-(8)-(10). La douleur et la
 De retour à \longcairn{}, on cherche le chevalier \agravain{} qui patrouille aux abords.Il veut capturer une créature des Précurseurs et nous l'y aidons \secret{551}. Après avoir vaincu un Conquéreur, ce dernier reste malheureusement muet mais nous arrivons à convaincre \agravain{} de rentrer à \camelot{} \gain{«5° Restaure Ordre»}. 
 
 
+Nous retournons ensuite à \loincomtat{} en passant chasser \sousmuraille{}.  De là, plein est, nous gagnons \devastation{} \trade{e2v2>O3}, une terre tourmentée. Dans les mines de minéraux d'outre monde on arrive à des salles très anciennes mais encore mystérieuses pour nous (seulement Chap. 10), en attendant \gain{\magic[1], «7° Mystère Brûlant»}. Au niveau des habitations, anciennes et effondrées, un homme momifié est incrusté dans un mûr mais encore ``vivant''. A l'écouter, on sombre presque dans la folie et les étoiles anciennes \gain{«4° Mystère Brûlant», «7° Rêves et Prophéties», \magic[4] par \terror[1] jusqu'à 4}.
 
+Ensuite, descente vers le sud pour gagner \cornes{} en prenant le temps d'activer le menhir de \debacle{} et du \tumulus{}. Deux tours jumelles sont érigées sur des ilôts, face à la falaise. Dans celle avec de la lumière, nous parlons à des veilleurs (18), et leur racontons une histoire courte mais inquiétante (13), ils nous offrent du matériel (16) \gain{\nour[3], \rich[1], «2° Heureuse Rencontres»}. Le plus jeune nous raccompagne en nous demandant d'aller voir dans l'autre tour (11) \gain{\rich[1], «3° Main Secourable»}. Accéder à l'autre tour est dangereux, nous chutons à plusieurs reprises. Comme indiqués dans nos rêves, nous parvenons difficilement à maîtriser puis libérer une jeune femme redevenue sauvage (4,9,15,6,3,21) \gain{«3° Renseignments Troublants», +1XP}. Elle s'enfuit en courant sans demander son reste.
 
+Convaincu que nous n'aurons pas le temps de pousser jusqu'à \larvebois{} avant que le Wyrd ne nous prenne, on repart activer le menhir de \bordwyrd{} afin de pousser vers l'ouest de \devastation{}. On peut ainsi atteindre \ondechute{} où de gigantesques visages ornent la falaise, des cascades se jettant dans la mer. Ou fouille d'abord la maison en ruine (2), un ancien poste de péage \secret{284} avec une trappe qui recèles des trésors \gain{1 objet, équipement aventuriers, \rich[1], «7° Trésors Cachés», \secret{2}:«découverte troublante»}.
 
+La descente vers les visages permet lentement mais sûrement d'atteindre un tunnel glacial (7,10), avec des hurlements terribles. On dégage les décombres au bout et \secret{176} ce qui fait jaillir une rivière souterraine. La progression est encore plus périlleuse et plus lente mais \secret{605} on débouche finalement à \tuathan{}. \gain{\secret{67}:«repos troublé»}.
 
 
 \printindex
