--- a/common.tex
+++ b/common.tex
@@ -200,6 +200,7 @@
 \def\croisee{\lieu{Croisée}[152][Croisee]}
 \def\cuanacht{\lieu{Cuanacht}[101]}
 \def\debacle{\lieu{Debâcle}[118][Debacle]}
+\def\devastation{\lieu{Dévastation}[139][Dévastation]}
 \def\faldorca{\lieu{Faldorca}[148]}
 \def\falfuar{\lieu{Falfuar}[134,147]}
 \def\flotte{\lieu{Flotte d'Épaves}[119][Flotte d'Epaves]}
@@ -216,6 +217,7 @@
 \def\murmures{\lieu{Forêt des Murmures}[155][Foret des Murmures]}
 \def\nidcorbeaux{\lieu{Nid-de-Corbeaux}[160]}
 \def\noirbourbe{\lieu{Noirebourbe}[140]}
+\def\ondechute{\lieu{Ondechute}[156]}
 \def\plainessacrees{\lieu{Plaines Sacrées}[???][Plaines Sacrees]}
 \def\sousmuraille{\lieu{Sous la Muraille}[111]}
 \def\premierfort{\lieu{Premier Fort}[117]}
