--- a/campagne.tex
+++ b/campagne.tex
@@ -242,6 +242,50 @@ Convaincu que nous n'aurons pas le temps de pousser jusqu'à \larvebois{} avant 
 La descente vers les visages permet lentement mais sûrement d'atteindre un tunnel glacial (7,10), avec des hurlements terribles. On dégage les décombres au bout et \secret{176} ce qui fait jaillir une rivière souterraine. La progression est encore plus périlleuse et plus lente mais \secret{605} on débouche finalement à \tuathan{}. \gain{\secret{67}:«repos troublé»}.
 
 
+% ****************************************************************************
+% ***************************************************************** Chapitre 8 
+% ****************************************************************************
+\section{Chapitre 8}
+
+\tuathan{} est un lieu bien étrange et les lois du monde sont parfois changeantes.
+
+% *************************
+\subsection{Terreur et Vie}
+Lors de cette étape, lors du repos, les pertes de \life{} et \terror{} sont inversées. On évite d'abord (3-2:15) des murs qui se rapprochent, une fontaine qui crache du goudron acide pour échapper in-extremis à un piège (35). Mais on comprend mieux la ville \gain{\nrj[-2], \life[-1], \texttt{quête}}. Puis, (1-2:16) on grimpe un escalier en voyant notre dos devant nous ce qui terrifie ceux moins habitué à la magie \gain{\texttt{quête}, \magic[1] si 3 en Spiritualité}. Enfin, une grande avenue défiant les lois physiques nous vide de notre énergie mais participe à notre édification \gain{\nrj[-4], \texttt{quête}}.
+
+% *********************************
+\subsection{Nourriture et Richesse}
+Maintenant, il semble qu'il faille se nourrir d'or à la place de nourriture. Après un combat (2-5:V), on arrive dans un labyrinthe (4-1:13) dont nous ne sortons qu'après de longues heures prudentes \gain{\nrj[-2], \texttt{quête}}. Cela dit, nous parfenons ainsi à arriver à un lieu plus plaisant, presque accueillant.
+
+% *****************************
+\subsection{Résolution d'Orrin}
+La \resolutionorrin{} est un bâtiment solitaire perché sur 4 pattes. Tout est pensé pour bien accueillir les voyageurs, même si un autel sanglant est un peu impressionnant. En fouillant (5) \gain{\nour[4], \rich[2], 2 objets, «3° Rencontres Étranges» } et en se reposant (6) on se sent plus a même de repartir affronter la ville \gain{\life[5], \terror[-5]}.
+
+% ***********************************
+\subsection{Epuisé ou la vie s'en va}
+Dans le prochain quartier, si le soir ne nous trouve pas épuisé, notre force vitale est aspirée au loin. De nouveau dans les rues de la ville, le ciel ressemble à un vitrail avec un soleil gigantesque (4-2:44), l'ombre des pyramides est propices à repenser au bon temps passé ``avant'' \gain{\life[-3], \terror[-2], \texttt{quête}}. On combat à nouveau, mais on cherche surtout de l'eau. Des chaudrons dans une bâtisse (3-3:25) sont malheureusement remplis d'acide en ébulition. On y jette de l'or et on y insuffle de la magie \secret{67} ce qui fait apparaître un enfant en or qui hurle horriblement \gain{\terror[3], \texttt{quête}}.
+
+% ********************************
+\subsection{Faiblesses exacerbées}
+Plus loin, nos propres faiblesses sembles exacerbées par Tuathan. Le passé qui nous rattrape. On arrive rapidement à un temple immense (3-1:41), comme une gigantesque cage toracique avec un trône en son centre. Nous devons combattre un Esprit Précurseur avant de pouvoir examiner le trône couvert d'épines en wyrdroche. \arev{} s'y asseoit et son esprit est aspirés dans les méandres de la Cité \gain{ \life[-4], \terror[3], \magic[6], 2XP, 2 \texttt{quêtes}, «1° Exploration de Tuathan»}.
+
+% ****************
+\subsection{Folie oubliée}
+Avec ce que nous savons maintenant, nous pouvons continuer l'exploration et arriver dans un lieu étrange, stase et transes nous débarasse de notre peur de la folie. Nous voilà bientôt entourés d'étrange statues d'argile sans visage (5-3:47). Quand elles commencent à communiquer par des ``moi ?'' (39), nos tentatives pour en savoir plus les transforment en nous-même. Et elles attaquent \gain{\texttt{quête}}. Un autre combat (V) et nous arrivons à une petite forge dont le sol est couvert de tâches de sang (6-1:60). Attaqué par un ``chevalier errant'', on profite de l'occasion pour forger des rubis avec notre propre sang \secret{462}, \gain{\terror[1], \rich[6], \texttt{quête}}. Une volonté trop marquée d'explorer nous amène ensuite dans une champignonière (2Q-55) où l'on peut se reposer (63) \gain{\nrj[1]} et dormir \secret{415} \gain{\texttt{quête}}. Toujours plus loin, (3-1:10) un endroit où les choses et les êtres se réparent \gain{\life[1]}, mais il ne faut pas s'attarder car finalement l'endroit s'effondre \secret{475} \gain{\life[-2], \terror[2], \nour[-1] par membre du groupe, \texttt{quête}}. Quand on reprend nos esprits, on parvient enfin à gagner le \coeurtuathan{}.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 \printindex
 
 \end{document}
