--- a/common.tex
+++ b/common.tex
@@ -195,6 +195,7 @@
 \def\camelot{\lieu{Camelot}}
 \def\cerclelunaire{\lieu{Cercle Lunaire}[133]}
 \def\chatoyantes{\lieu{Étendues Chatoyantes}[157][Etendues Chatoyantes]}
+\def\coeurtuathan{\lieu{C\oe{}ur de Tuathan}[185]}
 \def\conclave{\lieu{Conclave Calciné}[104][Conclave Calcine]}
 \def\cornes{\lieu{Cornes du Sud}[120]}
 \def\croisee{\lieu{Croisée}[152][Croisee]}
@@ -219,13 +220,14 @@
 \def\noirbourbe{\lieu{Noirebourbe}[140]}
 \def\ondechute{\lieu{Ondechute}[156]}
 \def\plainessacrees{\lieu{Plaines Sacrées}[???][Plaines Sacrees]}
+\def\resolutionorrin{\lieu{Résolution d'Orrin}[180][Resolution d\'Orrin]}
 \def\sousmuraille{\lieu{Sous la Muraille}[111]}
 \def\premierfort{\lieu{Premier Fort}[117]}
 \def\tetesereine{\lieu{Tête Sereine}[132][Tete Sereine]}
 \def\templemere{\lieu{Temple de la Toute-Mère}[115][Temple de la Toute-Mere]}
 \def\tombesordre{\lieu{Tombes de l'Ordre}[154]}
 \def\tordracine{\lieu{Tordracine}[114]}
-\def\tuathan{\lieu{Tuathan}}
+\def\tuathan{\lieu{Tuathan}[199]}
 \def\tumulus{\lieu{Tumulus des Précurseurs}[106][Tumulus des Precurseurs]}
 \def\valleegardiens{\lieu{Vallée des Gardiens}[150][Valle des Gardiens]}
 \def\valsanglant{\lieu{Val Sanglant}[112]}
